fix z-index on quiz

--- a/src/components/quiz/_Quiz.scss
+++ b/src/components/quiz/_Quiz.scss
@@ -54,7 +54,7 @@
 }
 .quizSvg_1,
 .quizSvg_2 {
-	z-index: 200;
+	z-index: 100;
 }
 .quizSvg_1 {
 	position: absolute;
